fixed annoying window size non-inheritance

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -18,9 +18,11 @@
 	},
 	"diffEditor.renderSideBySide": false,
 	"editor.autoIndent": "advanced",
+	"editor.fontFamily": "'Jet Brains Mono Thin', 'monospace', monospace, 'Droid Sans Fallback'",
 	"editor.formatOnSave": true,
 	"editor.tabSize": 4,
 	"explorer.confirmDelete": false,
+	"explorer.confirmDragAndDrop": false,
 	"files.autoSave": "afterDelay",
 	"git.autofetch": true,
 	"git.confirmSync": false,
@@ -31,7 +33,9 @@
 	"prettier.useTabs": true,
 	"python.formatting.blackArgs": ["--line-length", "88"],
 	"python.formatting.provider": "black",
-	"python.linting.mypyEnabled": true,
+	"python.linting.enabled": true,
+	"python.linting.flake8Args": ["--ignore=W292"],
+	"python.linting.flake8Enabled": true,
 	"python.linting.mypyArgs": [
 		"--ignore-missing-imports",
 		"--follow-imports=normal",
@@ -44,6 +48,8 @@
 		"--warn-redundant-casts",
 		"--pretty"
 	],
+	"python.linting.mypyEnabled": true,
+	"python.linting.pylintEnabled": false,
 	"python.showStartPage": false,
 	"restructuredtext.languageServer.disabled": true,
 	"svelte.plugin.html.completions.enable": true,
@@ -56,8 +62,8 @@
 	"terminal.integrated.fontFamily": "'Jet Brains Mono Thin', 'monospace', monospace, 'Droid Sans Fallback'",
 	"terminal.integrated.shell.linux": "/bin/bash",
 	"vsicons.dontShowNewVersionMessage": true,
+	"window.newWindowDimensions": "inherit",
 	"window.restoreFullscreen": true,
-	"editor.fontFamily": "'Jet Brains Mono Thin', 'monospace', monospace, 'Droid Sans Fallback'",
 	"window.titleBarStyle": "custom",
 	"workbench.colorTheme": "Pitch Black",
 	"workbench.editorAssociations": [
