i managed to write tarball installation routine lmao (that is also pink!). folks, turns out having experience really does help and with it bash — once being mysterious piece of shit — reveals itself as clunky, dumb, retardedly engineered piece of shit

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -57,9 +57,11 @@
 	"svelte.plugin.html.tagComplete.enable": true,
 	"svelte.plugin.svelte.format.enable": true,
 	"svelte.plugin.svelte.hover.enable": true,
+	"svelte.plugin.typescript.enable": false,
 	"telemetry.enableCrashReporter": false,
 	"telemetry.enableTelemetry": false,
 	"terminal.integrated.fontFamily": "'Jet Brains Mono Thin', 'monospace', monospace, 'Droid Sans Fallback'",
+	"editor.fontWeight": "100",
 	"terminal.integrated.shell.linux": "/bin/bash",
 	"vsicons.dontShowNewVersionMessage": true,
 	"window.newWindowDimensions": "inherit",
