jupyter server config + del useless ext

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -19,6 +19,7 @@
 	"diffEditor.renderSideBySide": false,
 	"editor.autoIndent": "advanced",
 	"editor.fontFamily": "'Jet Brains Mono Thin', 'monospace', monospace, 'Droid Sans Fallback'",
+	"editor.fontWeight": "100",
 	"editor.formatOnSave": true,
 	"editor.tabSize": 4,
 	"explorer.confirmDelete": false,
@@ -27,6 +28,7 @@
 	"git.autofetch": true,
 	"git.confirmSync": false,
 	"githubPullRequests.telemetry.enabled": false,
+	"jupyter.jupyterServerType": "local",
 	"prettier.printWidth": 88,
 	"prettier.tabWidth": 4,
 	"prettier.trailingComma": "es5",
@@ -61,7 +63,6 @@
 	"telemetry.enableCrashReporter": false,
 	"telemetry.enableTelemetry": false,
 	"terminal.integrated.fontFamily": "'Jet Brains Mono Thin', 'monospace', monospace, 'Droid Sans Fallback'",
-	"editor.fontWeight": "100",
 	"terminal.integrated.shell.linux": "/bin/bash",
 	"vsicons.dontShowNewVersionMessage": true,
 	"window.newWindowDimensions": "inherit",
